--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.6.1",
+    "@reduxjs/toolkit": "^2.8.1",
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.8.4",
     "cra-template": "1.2.0",
+    "lucide-react": "^0.513.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-qr-code": "^2.0.15",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.5.0",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
     "validator": "^13.15.0",
     "web-vitals": "^4.2.4"
